# mlc-llm

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .yamllint.yaml  CMakeLists.txt  CONTRIBUTORS.md  Dockerfile  MODEL_PREBUILTS.md  MakeFile  Makefile  NOTES.md  NOTICE  README.md  build.py  commit_message.txt  docker-compose.yml  dockerfile  dockerfile.bak3  environment-dev.yml  environment-prod.yml  environment-test.yml  main_decode.py  main_decode_gemv.py  main_matmul.py  main_norm.py  main_softmax.py  play.sh  pyproject.toml  quick-start.sh  refactor.md  requirements.txt  sch.py  scratchpad.md  setup.py  spec.json  test_cli.py  test_disco.py  (+14 more)
.devcontainer/: devcontainer.json
_test/: 0.before_quantize.py  1.gourp_quantized.py  2.get_pipeline.py  3.fuse_decode_matmul_ewise.py  5.liftTransformParams.py  6.split_transform_deploy.py  pytorch_inference.py
android/: .gitignore  CMakeLists.txt  README.md  build.gradle  prepare_libs.sh  prepare_model_lib.py  settings.gradle
android/MLCChat/app/src/main/cpp/: CMakeLists.txt  tvm_runtime.h
android/mlc4j/: CMakeLists.txt  build.gradle  prepare_libs.py
android/mlc4j/src/cpp/: tvm_runtime.h
android/mlc4j/src/main/java/ai/mlc/mlcllm/: ChatModule.java  JSONFFIEngine.java  MLCEngine.kt  OpenAIProtocol.kt
apps/mlc_cli_chat/: CMakeLists.txt  README.md  base.h  chat_state.cc  chat_state.h  engine.cc  engine.h  mlc_cli_chat.cc
ci/: bash.sh  build-environment.yaml  jenkinsfile.groovy
cmake/: gen_cmake_config.py
cpp/: README.md  base.h  cli_main.cc  conv_templates.cc  conversation.cc  conversation.h  image_embed.cc  image_embed.h  json_parser.h  llm_benchmark.cpp  llm_chat.cc  llm_chat.h  model_metadata.cc  model_metadata.h  random.h  rwkv_world_tokenizer.cc  rwkv_world_tokenizer.h  streamer.cc  streamer.h  support.h  tokenizers.cc  tokenizers.h
cpp/serve/: CMakeLists.txt  async_threaded_engine.cc  async_threaded_engine.h  config.cc  config.h  data.cc  data.h  draft_token_workspace_manager.cc  draft_token_workspace_manager.h  encoding.cc  encoding.h  engine.cc  engine.h  engine_state.cc  engine_state.h  engine_stats.cc  engine_stats.h  event_trace_recorder.cc  event_trace_recorder.h  function_table.cc  function_table.h  json_ffi_engine.cc  json_ffi_engine.h  logit_processor.cc  logit_processor.h  lora.cc  lora_manager.cc  lora_manager.h  metric.h  metrics.cc  metrics.h  model.cc  model.h  openai_api_protocol.cc  openai_api_protocol.h  prefix_cache.cc  prefix_cache.h  radix_tree.cc  radix_tree.h  request.cc  (+9 more)
cpp/serve/engine_actions/: abort_requests.cc  action.cc  action.h  action_commons.cc  action_commons.h  auto_spec_decode.cc  batch_decode.cc  batch_decoder_embedding_prefill.cc  batch_draft.cc  batch_embedding_prefill.cc  batch_jumpforward.cc  batch_prefill_base.cc  batch_prefill_base.h  batch_verify.cc  disagg_prepare_recv.cc  disagg_remote_send.cc  eagle_batch_draft.cc  eagle_batch_verify.cc  eagle_new_request_prefill.cc  new_request_prefill.cc  new_request_prefill_with_kv_send.cc  prefill_prepare.cc
cpp/serve/grammar/: grammar.cc  grammar.h  grammar_builder.h  grammar_functor.cc  grammar_functor.h  grammar_impl.cc  grammar_impl.h  grammar_parser.cc  grammar_parser.h  grammar_printer.cc  grammar_printer.h  grammar_serializer.cc  grammar_serializer.h  grammar_simplifier.cc  grammar_simplifier.h  grammar_state_matcher.cc  grammar_state_matcher.h  grammar_state_matcher_base.h  grammar_state_matcher_preproc.h  grammar_state_matcher_state.h  json_schema_converter.cc  json_schema_converter.h  support.h
cpp/serve/sampler/: cpu_sampler.cc  gpu_sampler.cc  sampler.h
docker/: README.md  build-mlc.sh  dev-entrypoint.sh
docs/: CNAME  Makefile  README.md  conf.py  genindex.html  http-routingtable.html  index.html  index.rst  llm-chat-config.json  make.bat  model-prebuilts.rst  model-zoo.rst  navigation.rst  numa_tensor_parallel.md  prebuilt_models.html  prebuilt_models.rst  privacy.html  requirements.txt
eval/: __init__.py  __main__.py  api_endpoint.py  dataset.py  request_processor.py  request_record.py
ios/: .gitignore  README.md  app-config.json  prepare.sh  prepare_libs.sh  prepare_model_lib.py  prepare_package.sh  prepare_params.sh
log_db/: database_tuning_record.json
mlc_llm/: NK-degemv.py  __init__.py  build.py  conversation.py  core.py  download_weights.py  transformers.py  tuning.py  utils.py
monitoring/: prometheus.yml
python/: README.md  requirements.txt  setup.py  test.py
qat_training/: README.md  __init__.py  requirements.txt
quantization/: ACKNOWLEDGEMENT.md  README.md  build.py  example.py  quant_llama.py  quant_wikitext2.py
rust/: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
rust/examples/: mlc_chat.rs
rust/src/: chat_module.rs  config.rs  lib.rs
scripts/: benchmark.py  build_mlc_for_docs.sh  build_site.sh  check_url_validity.py  dev-setup.sh  (+4 more)
serve/: pyproject.toml
serve/benchmarks/: benchmark_latency.py  benchmark_serving.py  benchmark_throughput.py  utils.py
serve/mlc_serve/: __main__.py  logging_utils.py  run.py  utils.py
serve/mlc_serve/api/: app.py  dependencies.py  handler.py  protocol.py
serve/mlc_serve/engine/: __init__.py  arg_utils.py  async_connector.py  base.py  dummy.py  dummy_inference_engine.py  engine_common.py  error.py  local.py  metrics.py  metrics_labels.py  mlc_llm_b1_inference_engine.py  model_module.py  rest.py  sampling_params.py  serving_layer.py  staging_engine.py  staging_engine_worker.py  streamer.py  sync_engine.py  types.py
serve/mlc_serve/model/: base.py  dummy_model.py  model_common.py  paged_cache_manager.py  paged_cache_model.py  tokenizer.py  tvm_model.py
serve/tests/: test_api.py  test_dummy_inference_engine.py  test_engine.py  test_engine_paged_cache_model.py  test_local_process_inference_engine.py  test_parallel_sampling.py  test_synchronous_inference_engine.py
serve/tests/data/: long_prompts.json
serve/tests/unittest/: test_api.py  test_dummy_inference_engine.py  test_engine_init.py  test_engine_with_samplers.py  test_staging_engine.py  test_streamer.py  test_sync_engine.py
(+1558 files in other folders)
