[package]
name = "mlc-llm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tvm-rt = { path = "../3rdparty/tvm/rust/tvm-rt", features = ["dynamic-linking"] }
tracing = "0.1.32"
derive_builder = "0.12.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.107"
