[project]
name = "mlc-serve"
requires-python = ">=3.9"
description = "LLM Batch Inference server"
dynamic = ["version"]

dependencies = ["fastapi==0.103.1"]

[project.optional-dependencies]
test = ["pytest~=7.4.2"]

[tool.setuptools]
packages = ["mlc_serve"]

[build-system]
requires = ["setuptools>=60", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
